--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -98,7 +98,7 @@ div, span{
     background: white;
 }
 .fullMap{
-        position: absolute !important;
+    position: absolute !important;
     width: 100%;
     height: 100%;
     top: 0;
@@ -108,4 +108,25 @@ div, span{
     width:100%;
 }
 
+/*navbar style here*/
+
+#navbar{
+    position: relative;
+}
+#tabContainer{
+    position: relative;
+    background-color: #33d6ff;
+    text-align: center;
+}
+#navbarUl{
+    list-style-type: none;
+    position: relative;
+}
+.navbarLi{
+    display: inline-block;
+    border: 2px solid #000000;
+    color: black;
+    padding: 5px;
+    border-radius: 5px 5px;
+}
 
