--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -129,13 +129,26 @@ div, span{
     border: 2px solid #465c8b;
 }
 #mapButton{
-    float:right;
-    border-radius:25px;
+       
+
+}
+.mapButtonMini{
+     float: right;
+    border-radius: 25px;
     position: absolute;
     z-index: 99999;
-    left: 292px;
     background: white;
 }
+.mapButtonEnlarged {
+    float: right;
+    right: 0;
+    top: 0;
+    font-size: 50px;
+    border-radius: 25px;
+    position: absolute;
+    z-index: 99999;
+    background: white;
+    }
 .fullMap{
     position: absolute !important;
     width: 100%;
