--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -83,6 +83,7 @@ div, span{
     overflow: scroll;
 }
 #filterContainer{
+
     background-color: #dfdce3;
     border: solid 2px #465c8b;
     border-radius: 6px;
@@ -103,7 +104,6 @@ div, span{
     border-radius: 6px;
     padding-bottom: 10px;
     background-color: #dfdce3;
-
 }
 #descriptionContent{
     height: 30VH;
@@ -128,6 +128,7 @@ div, span{
     border-radius: 6px;
     border: 2px solid #465c8b;
 }
+
 #mapButton{
        
 
@@ -164,7 +165,6 @@ div, span{
 /*navbar style here*/ #dfdce3
 
 #navbar{
-<<<<<<< 21d351584c369cf90be9c4e15662f04793e64ca2
     background-color: #dfdce3;
     position: relative;
     border-radius: 5px;
@@ -175,6 +175,8 @@ div, span{
     border-radius: 6px;
     border: solid 2px #465c8b;
     background-color: #dfdce3;
+    height: 50vh;
+    overflow: auto;
 }
 #navbarUl{
     list-style-type: none;
@@ -193,7 +195,6 @@ div, span{
     border-right: none;
     font-weight: bold;
 }
-
 .navbarLi:hover {
     background-color: #93c978;
     color: white;
@@ -233,32 +234,11 @@ div, span{
     display: block;
     align: center;
     padding: 5px;
-=======
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    display: inline-block;
+    border-radius: 5px 5px;
 }
-.navbarLi {
-    float: left;
-    border: 1px solid #000;
-    border-bottom-width: 0;
-    border-radius: 10%;
-    margin: 3px 3px 0px 3px;
-    padding: 5px 5px 0px 5px;
-    background-color: #80dfff;
-    color: black;
-}
-#mainView {
-    border: 1px solid black;
-    clear: both;
-}
-.container{
+.AllAnimals{
     display:none;
 }
-.active {
-    background-color: #FFF;
-    color: #000;
->>>>>>> (file)merging changes
+.speciesTitle{
+    cursor: pointer;
 }
