--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -103,7 +103,6 @@ div, span{
     border-radius: 6px;
     padding-bottom: 10px;
     background-color: #dfdce3;
-
 }
 #descriptionContent{
     height: 30VH;
@@ -128,27 +127,17 @@ div, span{
     border-radius: 6px;
     border: 2px solid #465c8b;
 }
+#detailDisplay{
+    padding: 10px;
+}
 #mapButton{
-       
-
-}
-.mapButtonMini{
-     float: right;
-    border-radius: 25px;
+    float:right;
+    border-radius:25px;
     position: absolute;
     z-index: 99999;
+    left: 292px;
     background: white;
 }
-.mapButtonEnlarged {
-    float: right;
-    right: 0;
-    top: 0;
-    font-size: 50px;
-    border-radius: 25px;
-    position: absolute;
-    z-index: 99999;
-    background: white;
-    }
 .fullMap{
     position: absolute !important;
     width: 100%;
@@ -179,6 +168,8 @@ div, span{
     margin: 0;
     width: 100%;
     display: inline-block;
+    height: 50vh;
+    overflow: auto;
 }
 #navbarUl{
     list-style-type: none;
