--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -83,7 +83,6 @@ div, span{
     overflow: scroll;
 }
 #filterContainer{
-
     background-color: #dfdce3;
     border: solid 2px #465c8b;
     border-radius: 6px;
@@ -104,6 +103,7 @@ div, span{
     border-radius: 6px;
     padding-bottom: 10px;
     background-color: #dfdce3;
+
 }
 #descriptionContent{
     height: 30VH;
@@ -128,28 +128,17 @@ div, span{
     border-radius: 6px;
     border: 2px solid #465c8b;
 }
-
 #mapButton{
        
-
 }
-.mapButtonMini{
-     float: right;
-    border-radius: 25px;
+#mapButton{
+    float:right;
+    border-radius:25px;
     position: absolute;
     z-index: 99999;
+    left: 292px;
     background: white;
 }
-.mapButtonEnlarged {
-    float: right;
-    right: 0;
-    top: 0;
-    font-size: 50px;
-    border-radius: 25px;
-    position: absolute;
-    z-index: 99999;
-    background: white;
-    }
 .fullMap{
     position: absolute !important;
     width: 100%;
@@ -162,7 +151,7 @@ div, span{
     width:100%;
 }
 
-/*navbar style here*/ #dfdce3
+/*navbar style here*/
 
 #navbar{
     background-color: #dfdce3;
@@ -175,8 +164,6 @@ div, span{
     border-radius: 6px;
     border: solid 2px #465c8b;
     background-color: #dfdce3;
-    height: 50vh;
-    overflow: auto;
 }
 #navbarUl{
     list-style-type: none;
