(species) add in species, styles, ngsanitize, bower.json additgion

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -75,7 +75,10 @@ div, span{
 #filterContent ul{
     -list-style-type: none;
     margin:0;
-    padding: 0 5px;
+    padding: 0 5px; 
+}
+
+#filterContent{
     height: 50vh;
     overflow: scroll;
 }
