--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
     margin: auto 0px;
-    background: url(../assets/clouds.jpg) no-repeat fixed center;
+    /*background: url(../assets/clouds.jpg) no-repeat fixed center;*/
+    background-color: ##f5f5f0;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -52,11 +53,12 @@ html {
     padding: 8px 25px;
     width: 200px;
 }
-div, span{
+/*div, span{
     border: 1px solid black;
-}
+}*/
 #totalContainer{
     height:100%;
+    margin: 20px;
 }
 #totalDisplayContainer{
     float:right;
@@ -70,7 +72,7 @@ div, span{
     max-width:300px;
 }
 #filterContent ul{
-    -list-style-type: none;
+    list-style-type: none;
     margin:0;
     padding: 0; 
 }
@@ -112,22 +114,37 @@ div, span{
 /*navbar style here*/
 
 #navbar{
+    background-color: #becdb1;
     position: relative;
+    text-align: left;
+    border-radius: 5px;
 }
 #tabContainer{
     position: relative;
-    background-color: #33d6ff;
-    text-align: center;
-    z-index: 1;
+    margin-top: 10px;
+    border-radius: 6px;
+    border: solid 1px;
+    background-color: #DAE2D3;
 }
 #navbarUl{
     list-style-type: none;
     position: relative;
+    padding: 0px;
+    margin: 0px;
 }
 .navbarLi{
+    background-color: #becdb1;
     display: inline-block;
-    border: 2px solid #000000;
-    color: black;
-    padding: 5px;
-    border-radius: 5px 5px;
+    border: 2px solid;
+    width: 19%;
+    padding: 6px 2px 4px 2px;
+    border-radius: 4px;
+    border-bottom: none;
+    border-right: none;
+    font-weight: bold;
 }
+/*#tabBody {
+    padding: 20px;
+    margin: 0px;
+}*/
+
