--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -1,9 +1,11 @@
 body {
     margin: auto 0px;
-    background: url(../assets/clouds.jpg) no-repeat fixed center;
+    /*background: url(../assets/clouds.jpg) no-repeat fixed center;*/
+    background-color: white;
     position: absolute;
     width: 100%;
     height: 100%;
+    font-family: Tahoma;
 }
 html {
     height: 100%;
@@ -61,6 +63,8 @@ div, span{
 #totalDisplayContainer{
     float:right;
     width: 68%;
+    background-color: #465c8b;
+    border-radius: 6px;
 }
 #filterMapContainer{
     height: 100vh;
@@ -72,7 +76,7 @@ div, span{
 #filterContent ul{
     -list-style-type: none;
     margin:0;
-    padding: 0; 
+    padding: 0 5px; 
 }
 
 #filterContent{
@@ -80,21 +84,35 @@ div, span{
     overflow: scroll;
 }
 #filterContainer{
-    background-color: #FFCC99;
+    background-color: #dfdce3;
+    border: solid 2px;
+    border-radius: 6px;
+}
+.filteredItem{
+    padding: 5px;
+    background-color: #dfdce3;
+    margin-bottom: 4px;
+}
+.filteredItem:hover {
+    background-color: #465c8b;
+    color: white;
 }
 #descriptionContainer{
     height: 50%;
     width:100%;
-    background-color: #FFCC99;
+
 }
 #descriptionContent{
     height: 30VH;
-    width: 100%;
+    width: 98%;
     overflow: scroll;
-
+    margin: 5px auto;
+    background-color: #f5f5f0;
+    border-radius: 6px;
 }
 #detailDisplay{
-    padding: 10px;
+    padding: 20px;
+    background-color: #f7ef6a;
 }
 #mapButton{
     float:right;
@@ -119,32 +137,67 @@ div, span{
 /*navbar style here*/
 
 #navbar{
+    background-color: #93c178;
     position: relative;
+    border-radius: 5px;
 }
 #tabContainer{
     position: relative;
-    background-color: #FFCC99;
-    text-align: center;
-    z-index: 1;
+    margin-top: 10px;
+    border-radius: 6px;
+    border: solid 1px;
+    background-color: #93c178;
 }
 #navbarUl{
     list-style-type: none;
     position: relative;
+    padding: 0px;
+    margin: 0px;
 }
 .navbarLi{
+    background-color: #93c178;
     display: inline-block;
-    border: 2px solid #000000;
-    color: black;
+    border: 2px solid;
+    width: 19%;
+    padding: 6px 2px 4px 2px;
+    border-radius: 4px;
+    border-bottom: none;
+    border-right: none;
+    font-weight: bold;
+}
+
+/*weather style here*/
+
+#weather {
+    padding: 20px;
+    border-radius: 6px;
+    text-align: center;
+}
+
+#sevenDayforcast {
+    display: inline-block;
+    /*border: solid 1px;*/
+    padding: 10px;
+    text-align: center;
+/*    background-color: #dfdce3;
+    border-radius: 4px;*/
+}
+
+.forecastDate, .forecastIcon, .forcastedHigh, .forcastedLow, .forcastedDescription    {
+    display: block;
+}
+
+.today {
+    /*border: solid 1px;*/
+    padding: 0px;
+    width: 150px;
+    margin: 10px auto;
+    /*background-color: #dfdce3;
+    border-radius: 4px;*/
+}
+
+#currTemp, #todayMin, #todayMax, #todayDescription {
+    display: block;
+    align: center;
     padding: 5px;
-    border-radius: 5px 5px;
-}
-.AllAnimals{
-    display:none;
-}
-#tabContainer{
-    height: 50vh;
-    overflow: auto;
-}
-.speciesTitle{
-    cursor: pointer;
 }
