--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -127,9 +127,6 @@ div, span{
     border-radius: 6px;
     border: 2px solid #465c8b;
 }
-#detailDisplay{
-    padding: 10px;
-}
 #mapButton{
        
 
@@ -163,10 +160,10 @@ div, span{
     width:100%;
 }
 
-/*navbar style here*/
+/*navbar style here*/ #dfdce3
 
 #navbar{
-    background-color: #93c178;
+    background-color: #dfdce3;
     position: relative;
     border-radius: 5px;
 }
@@ -174,13 +171,8 @@ div, span{
     position: relative;
     margin-top: 10px;
     border-radius: 6px;
-    border: solid 1px;
-    background-color: #93c178;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    display: inline-block;
+    border: solid 2px #465c8b;
+    background-color: #dfdce3;
     height: 50vh;
     overflow: auto;
 }
@@ -191,15 +183,20 @@ div, span{
     margin: 0px;
 }
 .navbarLi{
-    background-color: #93c178;
+    background-color: #dfdce3;
     display: inline-block;
-    border: 2px solid;
+    border: 2px solid #465c8b;
     width: 19%;
     padding: 6px 2px 4px 2px;
     border-radius: 4px;
     border-bottom: none;
     border-right: none;
     font-weight: bold;
+}
+
+.navbarLi:hover {
+    background-color: #93c978;
+    color: white;
 }
 
 /*weather style here*/
