edits design changes from dianas list, 3 done so far

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -60,18 +60,33 @@ div, span{
 #totalContainer{
     height:100%;
 }
-#totalDisplayContainer{
+/*#totalDisplayContainer{
     float:right;
-    width: 75%;
+    width: 68%;
     border-radius: 6px;
-}
-#filterMapContainer{
+}*/
+#totalDisplayContainer {
+        /* float: right; */
+    position: absolute;
+    left: 29%;
+    width: 68%;
+    border-radius: 6px;
+    }
+/*#filterMapContainer{
     height: 100vh;
     float:left;
     width:30%;
     -width: 250px;
     max-width:300px;
+}*/
+
+#filterMapContainer{
+    height: 100vh;
+    max-width: 300px;
+    position: absolute;
+        width: 25%;
 }
+
 #filterContent ul{
     -list-style-type: none;
     margin:0;
@@ -92,8 +107,13 @@ div, span{
     padding: 5px;
     background-color: #dfdce3;
     margin-bottom: 4px;
+    cursor: pointer;
 }
 .filteredItem:hover {
+    background-color: #93c978;
+    color: white;
+}
+.filteredItemActive {
     background-color: #93c978;
     color: white;
 }
