--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -13,7 +13,11 @@ html {
     padding: 0;
 }
 #mapHolder {
-     height:300px;
+    height: 300px;
+    background-color: #dfdce3;
+    border: solid 2px #465c8b;
+    border-radius: 6px;
+    padding: 10px;
 }
 #map{
     
@@ -71,6 +75,7 @@ div, span{
     left: 29%;
     width: 68%;
     border-radius: 6px;
+    height: 100vh;
     }
 /*#filterMapContainer{
     height: 100vh;
