--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -277,3 +277,15 @@ div, span{
 .speciesTitle{
     cursor: pointer;
 }
+
+/*campgrounds style here*/
+
+#campgrounds {
+    padding: 20px;
+    border-radius: 6px;
+    text-align: center;
+}
+
+#campgroundsTitle {
+	font-weight: bold;
+}
