--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -82,13 +82,7 @@ div, span{
     border-radius: 6px;
     height: 100vh;
     }
-/*#filterMapContainer{
-    height: 100vh;
-    float:left;
-    width:30%;
-    -width: 250px;
-    max-width:300px;
-}*/
+
 
 #filterMapContainer{
     height: 100vh;
@@ -253,15 +247,15 @@ div, span{
     padding: 20px;
     border-radius: 6px;
     text-align: center;
+    border: 1px solid black;
 }
 
-#sevenDayforcast {
+.sevenDayforcast {
     display: inline-block;
-    /*border: solid 1px;*/
+    border: solid 1px;
     padding: 10px;
     text-align: center;
-/*    background-color: #dfdce3;
-    border-radius: 4px;*/
+    border-radius: 4px;
 }
 
 .forecastDate, .forecastIcon, .forcastedHigh, .forcastedLow, .forcastedDescription    {
@@ -304,18 +298,73 @@ div, span{
 #campgroundsTitle, #campgroundsAmenitiesTitle {
 	font-weight: bold;
 }
-
+/*about us styles*/
+.entireBox {
+    float: left;
+    display: inline-block;
+    height: 250px;
+    width: 170px;
+    background-color: #475D8C;;
+    padding: 1.2%;
+    border-radius: 10%;
+    margin: 5px;
+}
+.content{
+    background-color:white;
+    border-radius: 10%;
+    height:100%;
+}
+.topSection{
+    text-align: center;
+    height: 96%;
+    padding: 4% 0;
+}
+.topSection .name{
+    color:black;
+}
+#everything{
+    width: 86%;
+    height: 100%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    top: 4px;
+}
+.profImage{
+    height: 100px;
+    border-radius: 50%;
+    vertical-align: middle;
+}
+.links{
+    margin-top: 43px;
+}
+.socialIcon {
+    height: 20px;
+    margin: 2px 10px;
+    border-radius: 10px;
+}
+.socialIcon:hover{
+    background-color: #f7ef6a;
+}
+.function{
+    font-style: oblique;
+    color: #989898;
+    font-size: 12px;
+}
 .aboutbox
 {
- margin: auto;
- position: absolute;
- top: 50px; left: 50px; 
- bottom: 50px; right: 50px;
- background-color: #000;
- color: #FFF;
- z-index: 10;
- display: none;
- 
+    margin: auto;
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    bottom: 50px;
+    right: 50px;
+    background-color: #93C978;
+    color: #FFF;
+    z-index: 10;
+    border-radius: 30px;
+    border: 11px solid #465C8B;
+        display: none;
 }
 
 .about
