--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -303,7 +303,7 @@ div, span{
     float: left;
     display: inline-block;
     height: 250px;
-    width: 170px;
+    width: 25%;
     background-color: #475D8C;;
     padding: 1.2%;
     border-radius: 10%;
@@ -321,6 +321,7 @@ div, span{
 }
 .topSection .name{
     color:black;
+    font-size:16px;
 }
 #everything{
     width: 86%;
